added direct buffer paramters to readme